[package]
name = "crawdad-rkyv"
version = "0.4.0-rkyv.1"
edition = "2024"
rust-version = "1.90.0"
authors = [
    "stellanomia <fulmlumo@gmail.com>",
    "Shunsuke Kanda <shnsk.knd@gmail.com>",
]
description = "Crawdad: ChaRActer-Wise Double-Array Dictionary with rkyv support"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/stellanomia/crawdad-rkyv"
repository = "https://github.com/stellanomia/crawdad-rkyv"
readme = "README.md"
keywords = ["search", "text", "double-array", "trie"]
categories = ["text-processing", "algorithms", "data-structures"]
exclude = [".*"]

[dependencies]
rkyv = "0.8.15"

[features]
default = ["alloc"]

alloc = []
